--- a/web/style.css
+++ b/web/style.css
@@ -1,20 +1,24 @@
 
 /* global blue #6fa8dc */
 /* global gray #d1d2d4 */
-/* global ligth gray #f5f5f5 */
+/* global ligth gray #f0f0f0 */
 
 html *{
 	font-family: Verdana,Helvetica,Arial,sans-serif;
 	font-size: 14px;
 }
 
+
+
 a:link {text-decoration: none}
 a:visited {text-decoration: none}
 a:active {text-decoration: none}
-a:hover {text-decoration: underline; color: #6fa8dc;}
+a:hover {text-decoration: none; color: #6fa8dc; }
+input:focus { outline: none; }
 
 p, a {
 	color: inherit;
+	font-size: inherit;
 }
 
 .userinfo{
@@ -29,7 +33,7 @@ p, a {
 .headersel{
 	border-bottom-style: solid;
 	border-width: 2px;
-	border-color: #d1d2d4;
+	border-color: #6fa8dc;
 }
 .headertext{
 	line-height: 20px;
@@ -40,50 +44,77 @@ p, a {
 	width: 800px;
 	margin-left: auto;
 	margin-right: auto;
+	padding-bottom: 100px;
 }
 
 .hline{
 	background-color: #d1d2d4;
-	width: 800px;
+	width: 100%;
 	height: 1px;
 }
 
 .container{
-	margin: 10px;
+	margin: 5px;
 }
 
 .title{
 	font-size: 22px;
 	font-weight: bold;
-	margin: 30px 0px;
+	margin-top: 30px;
+	margin-bottom: 20px;
 }
+.subtitle{
+	font-size: 18px;
+	font-weight: bold;
+	margin: 20px 0px;
+}
+
+.newswrapper{
+	border: 3px solid #f0f0f0;
+}
+.newswrapper ul li {
+	margin-bottom: 1em;
+}
+.newsdate{
+	margin-right: 1em;
+	font-size: 12px;
+	float:right;
+}
+
 .problimit{
 	margin-right: 5px;
 }
 
 .sectionheader{
 	height: 30px;
-	width: 800px;
+	width: 100% - 1em;
 	font-weight: bold;
-	background-color: #f5f5f5;
-	margin: 20px 0px;
+	background-color: #f0f0f0;
+	margin: 10px 0px;
 	line-height: 30px;
 	padding-left: 1em;
 }
 .sectioncontent{
 	margin-left: 1em;
 }
-.sample{
-	width: 40%;
-	font-family: Courier;
-	margin: 10px;
+.left1em{
+	margin-left: 1em;
 }
-/*
-.ui-button-text {
-	font-family: Helvetica,Arial,Verdana,sans-serif;
+.samplewrapper{
+	padding: 5px;
+	margin: 10px 0px;
+	border: 3px solid #d1d2d4;
+}
+.sampleheader{
+	font-weight: bold;
 	font-size: 12px;
 }
-*/
+
+pre {
+	width: 100%;
+	font-family: Courier New, Courier;
+	background-color: #f0f0f0;
+}
 
 .math{
 	font-family: times new roman, sans-serif;
@@ -93,22 +124,178 @@ p, a {
 .math-index{
 	font-family: times new roman, sans-serif;
 	font-style: italic;
-	font-size: 14px;
+	font-size: 12px;
 }
 
 .btn-text{
 	font-size: 12px;
 }
-.submitbtn{
+.bottombtn{
 	font-size: 30x;
-	float: right;
+	float: left;
+	margin: 0px 10px;
+	width: 150px;
 }
+.btn{
+	font-size: 30x;
+	margin: 10px 10px;
+	width: 150px;
+}
+.submitbox{
+	float: left;
+	border: 3px solid #f0f0f0;
+	margin: 10px;
+	padding: 30px;
+}
+.submitbox div{
+	margin: 10px 0px;
+}
+.sourcecode{
+	width: 700px;
+	height: 300px;
+}
+.emphbtn {
+	-moz-box-shadow:inset 0px 1px 0px 0px #bee2f9;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #bee2f9;
+	box-shadow:inset 0px 1px 0px 0px #bee2f9;
+	background-color:#63b8ee;
+	-webkit-border-top-left-radius:15px;
+	-moz-border-radius-topleft:15px;
+	border-top-left-radius:15px;
+	-webkit-border-top-right-radius:0px;
+	-moz-border-radius-topright:0px;
+	border-top-right-radius:0px;
+	-webkit-border-bottom-right-radius:15px;
+	-moz-border-radius-bottomright:15px;
+	border-bottom-right-radius:15px;
+	-webkit-border-bottom-left-radius:0px;
+	-moz-border-radius-bottomleft:0px;
+	border-bottom-left-radius:0px;
+	text-indent:0;
+	border:1px solid #3866a3;
+	display:inline-block;
+	color:#14396a;
+	font-family:Verdana;
+	font-size:15px;
+	font-weight:bold;
+	font-style:normal;
+	height:50px;
+	line-height:50px;
+	width:149px;
+	text-decoration:none;
+	text-align:center;
+	text-shadow:1px 1px 0px #7cacde;
+	float:right;
+}.emphbtn:hover {
+	background-color: #468ccf;
+}.emphbtn:active {
+	position:relative;
+	top:1px;
+}
+/* This button was generated using CSSButtonGenerator.com */
+
+
+.probcode {
+	border: 2px solid #f0f0f0;
+	width: 100px;
+	text-align: center;
+	display: inline-block;
+}
+
+.listtitle{
+	margin-left: 1em;
+}
+.liststatus{
+	float:right;
+	font-size: 12px;
+	margin-right: 1em;
+}
+.listrow{
+	margin-bottom: 10px;
+	border-bottom: 3px solid #f0f0f0;
+}
+.probrow:hover{
+	border-bottom: 3px solid #d1d2d4;
+}
+
+.timeremaining{
+	width: 100%;
+	text-align: right;
+	font-size: 12px;
+}
+
+
+.judgeprogress{
+	height: 10px;
+	margin-top: 5px;
+}
+.judgegroup{
+	border: 3px solid #f0f0f0;
+	padding: 10px;
+	-webkit-border-top-left-radius:15px;
+	-moz-border-radius-topleft:15px;
+	border-top-left-radius:15px;
+	-webkit-border-top-right-radius:15px;
+	-moz-border-radius-topright:15px;
+	border-top-right-radius:15px;
+	-webkit-border-bottom-right-radius:15px;
+	-moz-border-radius-bottomright:15px;
+	border-bottom-right-radius:15px;
+	-webkit-border-bottom-left-radius:15px;
+	-moz-border-radius-bottomleft:15px;
+	border-bottom-left-radius:15px;
+}
+.testid{
+	background-color: #c0c0c0;
+	margin: 10px;
+	width: 20px;
+	height: 20px;
+	text-align: center;
+	display: inline-block;
+	color: white;
+}
+
+.testcase{
+	width: 120px;
+	display: inline-block;
+	cursor: pointer;
+}
+.judgestatus{
+	margin-left: 0.5em;
+}
+.groupresult{
+	margin-right: 0.5em;
+	float:right;
+}
+
 table {
 	border: 2px solid #d1d2d4;
 	text-align: center;
-	background-color: #f5f5f5;
+	background-color: #f0f0f0;
 }
 
-tr{
+tr {
 	background-color: white;
+	line-height: 30px;
 }
+td {
+	font-size: 12px;
+}
+.tr-header{
+	font-weight: bold;
+}
+
+.text-bold { font-weight: bold; }
+.color-ac{ color: #4184b7; }
+.color-pac{ color: #6fa8dc; }
+.color-rej{ color: #8e2d2d; }
+.color-run{ color: #d38d1e; }
+.color-ce{ color: #858d64; }
+.bgcolor-ac{ background-color: #4184b7; }
+.bgcolor-pac{ background-color: #6fa8dc; }
+.bgcolor-rej{ background-color: #8e2d2d; }
+.bgcolor-run{ background-color: #d38d1e; }
+.bgcolor-ce{ background-color: #858d64; }
+.border-ac{ border: 2px solid #4184b7; }
+.border-pac{ border: 2px solid #6fa8dc; }
+.border-rej{ border: 2px solid #8e2d2d; }
