add source/result time/mem info

--- a/web/style.css
+++ b/web/style.css
@@ -20,6 +20,12 @@ p, a {
 	color: inherit;
 	font-size: inherit;
 }
+span {
+	font-weight: inherit;
+	font-size: inherit;
+	margin: inherit;
+	line-height: inherit;
+}
 
 .userinfo{
 	top: -35px;
@@ -272,7 +278,15 @@ pre {
 }
 .groupresult{
 	margin-right: 0.5em;
+	margin-top: 0px;
 	float:right;
+}
+.subinfo{
+	font-size: 12px;
+	margin-right: 1em;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	font-weight: bold;
 }
 
 .registerinfo{
